add group split function
