# src/main/java/com/example/MrsAccountant/dto/TransactionSplitDTO.java
@@ -1,0 +1,31 @@
+package com.example.mrsaccountant.dto;
+
+public class TransactionSplitDTO {
+    private Long userId;
+    private Double amount;
+    private String role;
+
+    public Long getUserId() {
+        return userId;
+    }
+
+    public void setUserId(Long userId) {
+        this.userId = userId;
+    }
+
+    public Double getAmount() {
+        return amount;
+    }
+
+    public void setAmount(Double amount) {
+        this.amount = amount;
+    }
+
+    public String getRole() {
+        return role;
+    }
+
+    public void setRole(String role) {
+        this.role = role;
+    }
+}
